# AUTH-Discord-Telegram-Bridge

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  messages.mo  pyproject.toml
aa_discord_telegram_bridge/: __init__.py  admin.py  apps.py  auth_hooks.py  bot_runner.py  discord_cog.py  forms.py  manager.py  models.py  permissions.py  signals.py  tasks.py  telegram_handler.py  urls.py  views.py
aa_discord_telegram_bridge/locale/de/LC_MESSAGES/: django.mo  django.po
aa_discord_telegram_bridge/locale/fr/LC_MESSAGES/: django.mo  django.po
aa_discord_telegram_bridge/locale/ja/LC_MESSAGES/: django.mo  django.po
aa_discord_telegram_bridge/locale/ko/LC_MESSAGES/: django.mo  django.po
aa_discord_telegram_bridge/management/commands/: dtb_run_bot.py  dtb_update.py
aa_discord_telegram_bridge/migrations/: 0001_initial.py  0002_dtbsettings.py  0003_seed_settings.py  0004_alter_dtbsettings_version.py  0005_dtbsettings_autostart_bot_alter_dtbsettings_version.py  0006_alter_dtbsettings_github_repo_and_more.py  0007_botstatus_alter_dtbsettings_options_and_more.py  0008_dtbsettings_verification_days_and_more.py  0009_telegramlinkrequest_alter_dtbsettings_version.py  0010_remove_dtbsettings_verification_days_and_more.py  0011_remove_dtbsettings_github_repo_and_version.py  0012_remove_telegramuser_notifications_enabled.py  __init__.py
aa_discord_telegram_bridge/templates/dtb/: admin_groups.html  admin_index.html  admin_rule_form.html  admin_rules.html  admin_settings.html  admin_setup.html  history.html  services_ctrl.html  services_overview.html  status.html  verify_link.html
aa_discord_telegram_bridge/templatetags/: dtb_tags.py
(+4 files in other folders)
